Updating current Java talk